# motor

./: .clang-fomat  .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md  README.md.eng  assembly.txt  cmsis-dap.cfg  deassembly.sh  esp32dap.cfg  example.dts  gdb.txt  motor_dji.i  package-lock.json  package.json  west.yml
Documents/: aresLink_UART.md  insLink_UART.md
Documents/interlink/: aresLink_UART.md  insLink_UART.html  insLink_UART.md.future
Documents/motor/: README.md  api.md  devicetree.md
Documents/zephyr/: kconfig.md  zephyr_app.md
IMU/boards/: robomaster_board_c.overlay
IMU/src/vofa/: justfloat.h
VSC_sample_configs/: launch.json  settings.json  tasks.json
app/2024_3wheel/src/: main.c
app/IMU/: prj.conf
app/IMU/src/: main.c
app/motor/: prj.conf
app/motor/boards/: robomaster_board_c.overlay
boards/damiao/dm_mc02/: Kconfig.dm_mc02  board.cmake  board.yml  dm_mc02.dts  dm_mc02.yaml  dm_mc02_defconfig
boards/dji/robomaster_board_a/: Kconfig.robomaster_board_a  board.cmake  board.yml  robomaster_board_a.dts  robomaster_board_a.yaml  robomaster_board_a_defconfig
boards/dji/robomaster_board_c/: Kconfig.robomaster_board_c  board.cmake  board.yml  robomaster_board_c.dts  robomaster_board_c.yaml  robomaster_board_c_defconfig
drivers/: CMakeLists.txt  Kconfig
drivers/chassis/: CMakeList.txt  CMakeLists.txt  Kconfig  chassis.c  chassis.h  chassis_steer.c  chassis_steer.h  steerwheel.c  swchassis.c  swchassis.h
drivers/graph/: graph.h  inslink.c  inslink.h  rtt_graph.c
drivers/motor/: CMakeLists.txt  Kconfig  dji_macros.h  dji_ratios.h  motor_common.c  motor_dji.c  motor_dji.h  motor_dm.c  motor_dm.h  motor_gm6020.c  motor_m3508.c  motor_mi.c  motor_mi.h
drivers/motor/common/: CMakeLists.txt  common.c  common.h
drivers/motor/dji/: CMakeLists.txt  dji_macros.h  dji_ratios.h  motor_dji.c  motor_dji.h
drivers/motor/dm/: CMakeLists.txt  motor_dm.c  motor_dm.h
drivers/motor/mi/: CMakeLists.txt  motor_mi.c  motor_mi.h
drivers/pid/: CMakeLists.txt  Kconfig  pid.c  pid_mit.c  pid_single.c
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/paw3395/: CMakeLists.txt  Kconfig  paw3395.c  paw3395.h
drivers/transfer/: CMakeLists.txt  Kconfig  ares_sbus.c  ares_sbus.h
drivers/wheel/: CMakeLists.txt  Kconfig  mecanum.c  steerwheel.c
dts/bindings/: vendor-prefixes.txt
dts/bindings/canbus/: vnd,canbus.yaml
dts/bindings/chassis/: ares,chassis.yaml  ares,swchassis.yaml  steer,chassis.yaml
dts/bindings/esc/: dji,c620esc.yaml
dts/bindings/imu/: ares,ekf.yaml  gyro-bias.yaml
dts/bindings/motor/: dji,m3508.yaml  dji,motor.yaml  dm,motor.yaml  mi,motor.yaml
dts/bindings/pid/: pid,single.yaml  pid.mit.yaml
dts/bindings/sensor/: pixart,paw3395.yaml
dts/bindings/steerwheel/: ares,mecanum.yaml  ares,steerwheel.yaml
dts/bindings/transfer/: ares,sbus.yaml
include/: CMakeLists.txt  Kconfig
include/ares/: CMakeLists.txt  Kconfig  ares_comm.h
include/ares/board/: CMakeLists.txt  init.c  init.h
include/ares/connectivity/: uart_async_adapter.c  uart_trans.c  uart_trans.h
include/ares/ekf/: CMakeLists.txt  QuaternionEKF.c  QuaternionEKF.h  algorithm.c  algorithm.h  imu_task.c  imu_task.h  kalman_filter.c  kalman_filter.h  matrix_storage.c
include/ares/interboard/: interboard.c  interboard.h
include/ares/interface/: CMakeLists.txt  Kconfig  ares_interface.h
include/ares/interface/uart/: CMakeLists.txt  Kconfig  uart.c  uart.h
include/ares/interface/usb/: note.md  usb_bulk.c  usb_bulk.h
include/ares/mahony/: MahonyAHRS.h  algorithm.h
include/ares/plotter/: CMakeLists.txt  aresplot_protocol.c  aresplot_protocol.h  aresplot_uart.c  aresplot_uart.h
include/ares/protocol/: CMakeLists.txt  Kconfig  ares_protocol.h
include/ares/protocol/dual/: dual_protocol.c  dual_protocol.h
include/ares/protocol/plotter/: aresplot_protocol.h
include/ares/usb_bulk_trans/: CMakeLists.txt  usb_trans.c  usb_trans.h
include/ares/vofa/: CMakeLists.txt  justfloat.c  justfloat.h
include/zephyr/drivers/: chassis.h  ekf.ah_  motor.h  pid.h  sbus.h  steerwheel.h  wheel.h
lib/: CMakeLists.txt
lib/ares/: CMakeLists.txt  Kconfig  ares_comm.h
lib/ares/board/: CMakeLists.txt  init.h
lib/ares/connectivity/: CMakeLists.txt  Kconfig  uart_async_adapter.c  uart_async_adapter.h  uart_trans.c
lib/ares/ekf/: CMakeLists.txt  QuaternionEKF.c  QuaternionEKF.h  algorithm.c  imu_task.c  matrix_storage.c
lib/ares/interboard/: CMakeLists.txt
lib/ares/interface/: CMakeLists.txt  Kconfig
motor/: CMakeLists.txt  prj.conf
motor/boards/: dm_mc02.overlay  robomaster_board_c.overlay
motor/src/: TEMP_MACROS.h  main copy.cold  main.c
samples/chassis/: CMakeLists.txt  prj.conf
samples/usb_bulk_test/: prj.conf
scripts/: ares_gdb_plugin.py  openocd.cfg
src/motor/: CMakeLists.txt  prj.conf  threads.inf
src/text_a/: CMakeLists.txt  prj.conf
src/text_a/boards/: robomaster_board_a.overlay
src/text_a/src/: main.c
src/text_c/: prj.conf
submanifests/: externlib.yaml
test/usb_bulk_transfer/: bulk_benchmark.cpp  bulk_benchmark_macos  bulk_benchmark_single.cpp  bulk_benchmark_single_macos  bulk_max_speed.py  bulk_speed_test.py  two_direction_bulk.py
yunqiu/: prj.conf
yunqiu/boards/: robomaster_board_c.overlay
yunqiu/src/: main.c
zephyr/: module.yml
(+76 files in other folders)
