add_subdirectory_ifdef(CONFIG_EKF_LIB ekf)
add_subdirectory_ifdef(CONFIG_VOFA_LIB vofa)
add_subdirectory_ifdef(CONFIG_MASTER_BOARD interboard)
add_subdirectory_ifdef(CONFIG_SLAVE_BOARD interboard)
add_subdirectory_ifdef(CONFIG_UART_TRANS_LIB connectivity)
add_subdirectory_ifdef(CONFIG_EXPERIMENTAL_BULK_LIB usb_bulk_trans)
add_subdirectory_ifdef(CONFIG_USBD_BULK usbd_bulk_trans)
add_subdirectory(board)